--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,6 +10,10 @@ RUN apt-get update && apt-get install -y \
     libmagic1 \
     libgl1-mesa-glx \
     libglib2.0-0 \
+    libreoffice \
+    libreoffice-writer \
+    libreoffice-calc \
+    libreoffice-impress \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements and install dependencies
