--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,9 @@
+# API Keys
 GEMINI_API_KEY=your_gemini_api_key_here
-CORS_ORIGINS=http://localhost:3000,https://your-frontend.vercel.app
-PORT=8000
+OPENAI_API_KEY=your_openai_api_key_here
+
+# CORS Settings (Railway frontend URL)
+CORS_ORIGINS=https://your-frontend.railway.app,http://localhost:3000
+
+# Optional: Database URL (if you add database later)
+# DATABASE_URL=postgresql://user:password@host:port/dbname
