--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,37 +1,33 @@
 # Use official Python image
 FROM python:3.11-slim
 
+# Install system dependencies (FFmpeg is crucial for media tools)
+# libgl1-mesa-glx is needed for opencv-python (used by rembg/cv2)
+RUN apt-get update && apt-get install -y \
+    ffmpeg \
+    libsm6 \
+    libxext6 \
+    libgl1-mesa-glx \
+    && rm -rf /var/lib/apt/lists/*
+
 # Set working directory
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    ffmpeg \
-    libmagic1 \
-    libgl1-mesa-glx \
-    libglib2.0-0 \
-    libreoffice \
-    libreoffice-writer \
-    libreoffice-calc \
-    libreoffice-impress \
-    && rm -rf /var/lib/apt/lists/*
-
-# Copy requirements and install dependencies
+# Copy requirements first for caching
 COPY requirements.txt .
+
+# Install dependencies
+# We use --no-cache-dir to keep image small
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application code
+# Copy the rest of the application
 COPY . .
 
-# Create storage directory
-RUN mkdir -p /app/storage/temp
+# Create storage directory for temp files
+RUN mkdir -p storage/temp
 
 # Expose port
 EXPOSE 8000
 
-# Set environment variables
-ENV PORT=8000
-ENV PYTHONUNBUFFERED=1
-
-# Run the application
+# Command to run the application
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
